--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.4.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^7.0.2",
+    "redux-persist": "^6.0.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7"
   },
